# vector-hack

./: .gitignore  README.md
.claude/: settings.local.json
api/: firecrawl.md  serper.md
backend/: README.md  example.env  pyproject.toml
backend/app/: agent.py  main.py  prompts.py  state.py  tools.py
backend/app/memory/: extractor.py  store.py
backend/data/: memory.db
docs/: SRS_Growth_Intelligence_Platform - V2.md  SRS_Growth_Intelligence_Platform.md
docs/api/: amplitude.md  firecrawl.md  mixpal.md  newsdata.md  pluralshift.md  serper.md
docs/prompts/: setup.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AgentStatusPanel.tsx  ChatMessage.tsx  ComparisonBanner.tsx  ComparisonView.tsx  ExportButtons.tsx  FollowUpChips.tsx  ModelSelector.tsx  SessionSidebar.tsx  SourcesList.tsx  StarterChips.tsx
frontend/app/hooks/: useChat.ts  useSessions.ts  useTypewriter.ts
